# rust_qml_app

./: .gitignore  Cargo.toml  README.md  armv7-obreey-linux-gnueabi.json  build.rs  build.sh  configure.sh  deploy.sh  nightbuild.sh  runpc.sh  system
.cargo/: config.toml
src/: inkview.rs  lib.rs  main.rs
