[package]
name = "rust_qml_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qmetaobject = "0.2"
cstr = "0.2"

[build-dependencies]
regex = "1"
serde = { version = "1.0.136", features = ["derive"] }